--- a/app/views/surveys/index.html.erb
+++ b/app/views/surveys/index.html.erb
@@ -1,4 +1,7 @@
 <p class="pageTitle">All Survey's</p>
+<div class="pageNav-upper">
+	<%= link_to 'New Survey', new_survey_path, :class => "pageNav" %>
+</div>
 
 <table id="surveyTable">
   <tr>
@@ -13,6 +16,13 @@
     <td class="col2"><%= survey.description %></td>
     <td class="col3"><%= survey.survey_type.name.titleize %></td>
     <td class="col4-7"><%= link_to 'Show', survey %></td>
+		<td class="col4-7"><%= link_to 'Versions', survey_survey_versions_path(survey) %></td>
+    <td class="col4-7"><%= link_to 'Edit', edit_survey_path(survey) %></td>
+    <td class="col4-7"><%= link_to 'Destroy', survey, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
 <% end %>
 </table>
+
+<div class="pageNav">
+	<%= link_to 'New Survey', new_survey_path, :class => "pageNav" %>
+</div>
