--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -76,7 +76,7 @@ div.field, div.actions {
 /** Style Guide (Last Updated: 5/2/2011 Created: 4/19/2011) **/
 body {
   background-color: #FFFFFF;
-  font-family: Verdana, Helvetica, Arial, san-serif;
+  font-family: Arial,Helvetica,sans-serif;
   font-size: 13px;
 }
 
@@ -123,74 +123,7 @@ a img {
 
 textarea {
 	font-family: Verdana, Helvetica, Arial, san-serif;
-}
-
-/* Navigation */
-.navTitle {
-	border-bottom: 1px solid #243b7c;
-	/* background-color: #cad3f6; */
-	margin: 0px 0px /* 7px */;
-	padding: 0px 0px 3px;
-	color: #243b7c;
-	text-align: center;
-	font-size: 1.3em;
-	font-weight: bold;
-}
-
-p.nav {
-	border-bottom: 1px solid #243b7c;
-	margin: 0px 0px /* 7px */;
-	padding: 5px 5px;
-	color: #243b7c;
-}
-
-a.nav:link, a.nav:visited {
-	color: #243b7c;
-	text-decoration: none;
-	font-weight: normal;
-}
-
-a.nav:hover, a.nav:active {
-	color: #243b7c;
-	text-decoration: underline;
-	font-weight: bold;
-}
-
-div.pageNav {
-	color: #ffad05;
-	font-weight: bold;
 	font-size: 11px;
-	margin: 10px 0px 0px;
-	padding: 5px 0px 0px;
-	border-top: 6px double #eef1fc;
-}
-
-div.pageNav-upper {
-	color: #ffad05;
-	font-weight: bold;
-	font-size: 11px;
-	margin: -30px 0px 20px;
-	padding: 3px 0px 0px;
-}
-
-a.pageNav, a.pageNav:link, a.pageNav:visited {
-	color: #243b7c;
-	text-decoration: none;
-}
-
-a.pageNav:hover, a.pageNav:active {
-	color: #ffad05;
-	text-decoration: underline;
-}
-
-/* General */
-.pageTitle {
-	font-size: 1.9em;
-	font-weight: bold;
-	margin: 0px 0px 30px;
-	padding: 0px 0px 3px;
-	color: #243b7c;
-	border-bottom: 6px double #eef1fc;
 }
 
 /* 
@@ -199,7 +132,8 @@ a.pageNav:hover, a.pageNav:active {
 	Category Index Page
 	Manage Rules Page
 	Display Fields Page
-*/
+	Survey Response Table */
+
 #surveyTable, #versionTable, #categoryTable, 
 #rulesTable, #displayFieldsTable {
 	margin: 0px 0px 10px;
@@ -250,7 +184,7 @@ a.pageNav:hover, a.pageNav:active {
 	padding: 5px 0px;
 }
 
-#versionTable .col2 {
+#versionTable .col2, #rulesTable .col6 {
 	width: 70px;
 	text-align: center;
 	padding: 5px 0px;
@@ -286,13 +220,59 @@ a.pageNav:hover, a.pageNav:active {
 	font-weight: bold;
 }
 
-#rulesTable .col1 {
+#rulesTable .col1, #displayFieldsTable .col1 {
+	width: 400px;
 	padding: 5px 10px 5px 1px;
 }
 
-#rulesTable .col2, #displayFieldsTable .col1 {
-	width: 400px;
+#rulesTable .col2 {
+	text-align: center;
+	width: 35px;
+	padding: 5px 0px;
+}
+
+#survey_response_list  {
+	width: 805px;
+	margin: 10px 0px;
+	max-height: 600px;
+	overflow: auto;
+}
+
+#survey_response_list table {
+		border-collapse: collapse;
+}
+
+#survey_response_list th.date {
+	text-align: left;
+	font-size: 1.1em;
+	font-weight: bold;
 	padding: 5px 10px 5px 1px;
+	border-bottom: 2px solid #243b7c;
+	color: #000000;
+	min-width: 90px;
+	max-width: 90px;
+	vertical-align: bottom;
+}
+
+#survey_response_list th.questions {
+	text-align: left;
+	font-size: 1.1em;
+	font-weight: bold;
+	padding: 5px 10px 5px 1px;
+	border-bottom: 2px solid #243b7c;
+	color: #000000;
+	min-width: 150px;
+	max-width: 200px;
+	vertical-align: bottom;
+}
+
+#survey_response_list td {
+	text-align: left;
+	font-size: 1em;
+	font-weight: normal;
+	border-bottom: 1px solid #243b7c;
+	padding: 5px 9px 5px 1px;
+	vertical-align: top;
 }
 
 /* Cycle */
@@ -311,7 +291,135 @@ a.pageNav:hover, a.pageNav:active {
 	margin: 0px 0px 10px;
 }
 
+/* Text, OL, UL, LI */
+.pageTitle {
+	font-size: 1.9em;
+	font-weight: bold;
+	margin: 0px 0px 30px;
+	padding: 0px 0px 3px;
+	color: #243b7c;
+	border-bottom: 6px double #eef1fc;
+}
+
+.copy {
+	font-weight: normal;
+	color: #000;
+	line-height: normal;
+	padding: 0px;
+	margin: 0px 0px 15px;
+}
+
+.copyBold {
+	font-weight: bold;
+	color: #000;
+	padding: 0px;
+	margin: 0px;
+}
+
+.copyBoldMargin {
+	font-weight: bold;
+	color: #000;
+	padding: 0px;
+	margin: 25px 0px 0px;
+}
+
+ol.outter, ul.outter {
+	font-weight: normal;
+	color: #000;
+	line-height: normal;
+	padding: 0px;
+	margin: 10px 0px 0px 40px;
+}
+
+/* ol.inner, ul.inner,  */ul.showList, ol.showList {
+	font-weight: normal;
+	color: #000;
+	line-height: normal;
+	padding: 0px;
+	margin: 3px 0px 0px 30px;
+}
+
+li.outter {
+	margin: 0px 0px 15px 10px;
+	padding: 0px;
+	list-style-type: decimal;
+	list-style-position: outside;
+}
+
+li.inner {
+	font-weight: normal;
+	color: #000;
+	line-height: normal;
+	padding: 0px;
+	margin: 0px 0px 2px;
+}
+
+li.showList-ul {
+	padding: 0px 0px 3px;
+	list-style-type: none;
+}
+
+li.showList-ol {
+	padding: 0px 0px 3px;
+	list-style-type: decimal;
+	list-style-position: inside;
+}
+
+/* Modals */
+.modalTitle {
+	color: #243b7c;
+	font-size: 1.2em;
+	font-weight: bold;
+	margin: 0px 0px 15px;
+}
+
+.modalErrorBox {
+	border: 2px solid #980024;
+	background: #fbeff3;
+	padding: 5px 10px;
+	margin: 5px 0px 10px;
+}
+
+.modalErrorTitle {
+	color: #980024;
+	font-size: 1.1em;
+	font-weight:bold;
+	margin: 0px 0px 5px;
+	padding: 0px;
+}
+
+ul.modalList {
+	color: #980024;
+	font-size: 1em;
+	margin: 0px;
+	padding: 0px;
+}
+
+li.modalList {
+	color: #980024;
+	font-size: 1em;
+	margin: 0px 0px 0px 25px;
+	padding: 0px 0px 3px;
+}
+
+#new_choice_question_modal { 
+	padding: 10px;
+	min-width: 380px;
+}
+
+#new_asset_modal, #new_text_question_modal {
+	padding: 10px;
+}
+
 /* Pages */
+.page {
+	border: 1px solid #243b7c;
+	background-color: #eef1fc;
+	margin: 5px 0px 10px;
+	padding: 5px;
+	width: 793px;
+}
+
 .current_page {
 	
 }
@@ -320,13 +428,172 @@ a.pageNav:hover, a.pageNav:active {
 	display: none;
 }
 
-/* Links - General, must remain below any other links. */
-/* a, a:link, a:visited {
+/* General */
+.remove_page_link {
+	float: right;
+	display: inline-block;
+}
+
+.displayNone {
+	display:none; 
+}
+
+.surveyNavMargin {
+	margin: 5px 0px 35px;
+}
+
+.sumbitButton {
+	margin: 25px 0px 0px;
+}
+
+/* Navigation */
+.navTitle {
+	border-bottom: 1px solid #243b7c;
+	/* background-color: #cad3f6; */
+	margin: 0px 0px /* 7px */;
+	padding: 0px 0px 3px;
+	color: #243b7c;
+	text-align: center;
+	font-size: 1.3em;
+	font-weight: bold;
+}
+
+p.nav {
+	border-bottom: 1px solid #243b7c;
+	margin: 0px 0px /* 7px */;
+	padding: 5px 5px;
+	color: #243b7c;
+}
+
+a.nav:link, a.nav:visited {
+	color: #243b7c;
+	text-decoration: none;
+	font-weight: normal;
+}
+
+a.nav:hover, a.nav:active {
+	color: #243b7c;
+	text-decoration: underline;
+	font-weight: bold;
+}
+
+div.pageNav {
+	color: #ffad05;
+	font-weight: bold;
+	font-size: 11px;
+	margin: 10px 0px;
+	padding: 5px 0px 0px;
+	border-top: 6px double #eef1fc;
+}
+
+div.pageNav-upper {
+	color: #ffad05;
+	font-weight: bold;
+	font-size: 11px;
+	margin: -30px 0px 20px;
+	padding: 3px 0px 0px;
+}
+
+a.pageNav, a.pageNav:link, a.pageNav:visited {
 	color: #243b7c;
 	text-decoration: none;
 }
 
-a:hover, a:active {
+a.pageNav:hover, a.pageNav:active {
 	color: #ffad05;
 	text-decoration: underline;
-} */
+}
+
+div.surveyNav {
+	color: #000000;
+	text-decoration: none;
+	font-weight: bold;
+	font-size: 1em;
+	margin: 15px 0px 10px;
+	padding: 0px;
+	text-align: center;
+}
+
+span.surveyNav1 {
+	width: 110px;
+	display: inline-block;
+	
+}
+span.surveyNav2 {
+	width: 175px;
+	display: inline-block;
+}
+span.surveyNav3 {
+	width: 200px;
+	display: inline-block;
+}
+span.surveyNav4 {
+	width: 85px;
+	display: inline-block;
+}
+
+span.surveyNavPrev {
+	width: 105px;
+	display: inline-block;
+}
+
+span.surveyNavNext {
+	width: 85px;
+	display: inline-block;
+}
+
+span.surveyNavSub {
+	text-align: left;
+	display: inline-block;
+	padding: 0px 0px 0px 10px;
+}
+
+a.surveyNav, a.surveyNav:link, a.surveyNav:visited,
+a.simplemodal-close, a.simplemodal-close:link, a.simplemodal-close:visited {
+	font-weight: normal;
+	color: #243b7c;
+	text-decoration: none;
+}
+
+a.surveyNav:hover, a.surveyNav:active,
+a.simplemodal-close:hover, .simplemodal-close:active {
+	text-decoration: underline;
+	font-weight: bold;
+}
+
+/* Pagination */
+.pagination {
+	margin: 10px 0px;
+}
+
+span.first, span.last, span.prev, span.next {
+	color: #243b7c;
+	font-weight: bold;
+	font-size: 12px;
+	margin: 10px 0px;
+	padding: 0px 10px 0px 0px;
+	display: inline-block;
+	width: 40px;
+}
+
+span.pageNum {
+	color: #243b7c;
+	font-weight: bold;
+	font-size: 12px;
+	margin: 10px 0px;
+	padding: 0px 10px 0px 0px;
+	display: inline-block;
+}
+
+.pagination a, .pagination a:link, .pagination a:visited {
+	font-weight: normal;
+	color: #243b7c;
+	text-decoration: unerline;
+}
+
+.pagination a:hover, .pagination a:active {
+	text-decoration: underline;
+	font-weight: bold;
+}
+
+.gap {}
