--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -44,9 +44,9 @@
 	  <% index = 0 %>
 		<% for page in @survey_version.pages %>
 
-			<div class="<%= page.number == 1 ? 'current_page' : 'hidden_page' %>" id="page_<%=page.number%>">
-	      <%= hidden_field_tag :next_page, page.next_page.try(:number), :id => "page_#{page.number}_next_page" %>
-				<%= hidden_field_tag :prev_page, page.prev_page.try(:number), :id => "page_#{page.number}_prev_page" %>
+			<div class="<%= page.page_number == 1 ? 'current_page' : 'hidden_page' %>" id="page_<%=page.page_number%>">
+	      <%= hidden_field_tag :next_page, page.next_page.try(:page_number), :id => "page_#{page.page_number}_next_page" %>
+				<%= hidden_field_tag :prev_page, page.prev_page.try(:page_number), :id => "page_#{page.page_number}_prev_page" %>
 				
 				<%= hidden_field_tag "survey_version_id", @survey_version.id %>
 				<ol class="showList">
@@ -84,7 +84,7 @@
 								<% if element.assetable.answer_type == ChoiceAnswer::RADIO %>
 									<% for answer in element.assetable.choice_answers %>
 										<%= radio_button_tag "response[raw_responses_attributes][#{index}][answer]", answer.id, false,
-                      :onclick => (element.assetable.question_content.flow_control ? "set_next_page(#{page.number}, #{answer.page.try(:number) || (element.page.number + 1)})" : "Empty")%>
+                      :onclick => (element.assetable.question_content.flow_control ? "set_next_page(#{page.page_number}, #{answer.page.try(:page_number) || (element.page.page_number + 1)})" : "Empty")%>
 										<%= answer.answer%><br/>
 									<% end -%>
 									
@@ -114,13 +114,13 @@
 				<% end %>
 				</ol>
 				<div class="surveyNav">
-					<% unless page.number == 1 %>
-						<span class="surveyNavPrev"><%= link_to_function "Previous Page", "show_prev_page(#{page.number})", :class=>"surveyNav"  %></span> |
+					<% unless page.page_number == 1 %>
+						<span class="surveyNavPrev"><%= link_to_function "Previous Page", "show_prev_page(#{page.page_number})", :class=>"surveyNav"  %></span> |
 					<% end %>
-					<% unless page.number == @survey_version.pages.count %>
-						<span class="surveyNavNext"><%= link_to_function "Next Page", "show_next_page(#{page.number})", :class=>"surveyNav" %></span>
+					<% unless page.page_number == @survey_version.pages.count %>
+						<span class="surveyNavNext"><%= link_to_function "Next Page", "show_next_page(#{page.page_number})", :class=>"surveyNav" %></span>
 					<% end %>
-					<span class="surveyNavSub"><%= submit_tag "Submit Survey" if page.number == @survey_version.pages.count %></span>
+					<span class="surveyNavSub"><%= submit_tag "Submit Survey" if page.page_number == @survey_version.pages.count %></span>
 				</div>
 				
 			</div> <!-- close page div -->
@@ -129,6 +129,5 @@
 <% end -%>
 
 <div class="pageNav">
-	<%= link_to "View All", surveys_url, :class => "pageNav" %> |
-	<%= link_to "Edit Survey", edit_survey_url, :class => "pageNav" %>
+	<%= link_to "View All", surveys_url, :class => "pageNav" %>
 </div>
