--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -43,39 +43,43 @@
 	<%= form_tag url_for(:controller => "survey_responses", :action => "create") do %>
 	  <% index = 0 %>
 		<% for page in @survey_version.pages %>
-
+			<% question_number = 0 %>
 			<div class="<%= page.page_number == 1 ? 'current_page' : 'hidden_page' %>" id="page_<%=page.page_number%>">
-	      <%= hidden_field_tag :next_page, page.next_page.try(:page_number), :id => "page_#{page.page_number}_next_page" %>
+	      		<%= hidden_field_tag :next_page, page.next_page.try(:page_number), :id => "page_#{page.page_number}_next_page" %>
 				<%= hidden_field_tag :prev_page, page.prev_page.try(:page_number), :id => "page_#{page.page_number}_prev_page" %>
 				
 				<%= hidden_field_tag "survey_version_id", @survey_version.id %>
-				<ol class="showList">
+				<ul class="showList">
 				<% page.survey_elements.order("element_order asc").each do |element| %>
 					<li class="outter">
+						<% if element.assetable_type != 'Asset'  %>
+							<% question_number =+ question_number + 1  %>
+							<%= "#{question_number}." %>
+						<% end %>
 						<% if element.assetable_type == "MatrixQuestion" %>
-              <table>
-                <tr>
-                  <th></th>
-                  <% for column_header in element.assetable.choice_questions.first.choice_answers do %>
-                   <th><%= column_header.answer %></th>
-                  <% end -%>
-                </tr>
-                <% for row_header in element.assetable.choice_questions do %>
-                  <tr>
-                    <td>
-											<%= row_header.question_content.statement%><%= "*" if row_header.question_content.required? || element.assetable.required %>
-											<%= hidden_field_tag "#{row_header.question_content.id}_required", row_header.question_content.required || element.assetable.question_content.required, :class => "required_question" %>
-										</td>
-                    <% row_header.choice_answers.each do |a| %>
-                      <td>
-                      <%= hidden_field_tag "response[raw_responses_attributes][#{index}][question_content_id]", row_header.question_content.id %>
-                      <%= radio_button_tag "response[raw_responses_attributes][#{index}][answer]", a.id, false, :class => "question_#{row_header.question_content.id}_answer" %>
-                      </td>
-                    <% end %>
-                  </tr>
-                  <% index = index + 1%>
-                <% end -%>
-              </table>
+			              <table>
+			                <tr>
+			                  <th></th>
+			                  <% for column_header in element.assetable.choice_questions.first.choice_answers do %>
+			                   <th><%= column_header.answer %></th>
+			                  <% end -%>
+			                </tr>
+			                <% for row_header in element.assetable.choice_questions do %>
+			                  <tr>
+			                    <td>
+														<%= row_header.question_content.statement%><%= "*" if row_header.question_content.required? || element.assetable.required %>
+														<%= hidden_field_tag "#{row_header.question_content.id}_required", row_header.question_content.required || element.assetable.question_content.required, :class => "required_question" %>
+													</td>
+			                    <% row_header.choice_answers.each do |a| %>
+			                      <td>
+			                      <%= hidden_field_tag "response[raw_responses_attributes][#{index}][question_content_id]", row_header.question_content.id %>
+			                      <%= radio_button_tag "response[raw_responses_attributes][#{index}][answer]", a.id, false, :class => "question_#{row_header.question_content.id}_answer" %>
+			                      </td>
+			                    <% end %>
+			                  </tr>
+			                  <% index = index + 1%>
+			                <% end -%>
+			              </table>
 						<% elsif element.assetable_type != "Asset" %>
 							<%= hidden_field_tag "response[raw_responses_attributes][#{index}][question_content_id]", element.assetable.question_content.id %>
 							<%= hidden_field_tag "#{element.assetable.question_content.id}_required", element.assetable.question_content.required, :class => "required_question" %>
@@ -86,7 +90,7 @@
 								<% if element.assetable.answer_type == ChoiceAnswer::RADIO %>
 									<% for answer in element.assetable.choice_answers %>
 										<%= radio_button_tag "response[raw_responses_attributes][#{index}][answer]", answer.id, false,
-                      :onclick => (element.assetable.question_content.flow_control ? "set_next_page(#{page.page_number}, #{answer.page.try(:page_number) || (element.page.page_number + 1)})" : nil),
+                      						:onclick => (element.assetable.question_content.flow_control ? "set_next_page(#{page.page_number}, #{answer.page.try(:page_number) || (element.page.page_number + 1)})" : nil),
 											:class => "question_#{element.assetable.question_content.id}_answer"
 										%>
 										<%= answer.answer%><br/>
@@ -111,12 +115,12 @@
 								<% end -%>
 							<% end -%>
 						<% else %>
-              <%= element.assetable.snippet.html_safe%>
+              				<%= element.assetable.snippet.html_safe%>
 						<% end %>			
 					</li>
 					<% index = index + 1%>
 				<% end %>
-				</ol>
+				</ul>
 				<div class="surveyNav">
 					<% unless page.page_number == 1 %>
 						<span class="surveyNavPrev"><%= link_to_function "Previous Page", "show_prev_page(#{page.page_number})", :class=>"surveyNav"  %></span> |
