--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -91,18 +91,31 @@
 									<% for answer in element.assetable.choice_answers %>
 										<%= radio_button_tag "response[raw_responses_attributes][#{index}][answer]", answer.id, false,
                       						:onclick => (element.assetable.question_content.flow_control ? "set_next_page(#{page.page_number}, #{answer.page.try(:page_number) || (element.page.page_number + 1)})" : nil),
-											:class => "question_#{element.assetable.question_content.id}_answer"
+											:class => "question_#{element.assetable.question_content.id}_answer",
+											:checked=>answer.is_default
 										%>
 										<%= answer.answer%><br/>
 									<% end -%>
 									
 								<% elsif element.assetable.answer_type == ChoiceAnswer::DROPDOWN %>
-									<%= select_tag "response[raw_responses_attributes][#{index}][answer]", options_for_select(element.assetable.choice_answers.collect {|a| [a.answer, a.id]}),:include_blank => true, :onchange => generate_next_page_on_change(element), :class => "question_#{element.assetable.question_content.id}_answer" %>
+									<%= select_tag "response[raw_responses_attributes][#{index}][answer]", 
+										options_from_collection_for_select(element.assetable.choice_answers, "id", "answer", :selected=>Proc.new {|obj| obj.is_default}),
+										:include_blank => true, :onchange => generate_next_page_on_change(element), 
+										:class => "question_#{element.assetable.question_content.id}_answer" %>
 								<% elsif element.assetable.answer_type == ChoiceAnswer::MULTISELECT %>
-								  <%= select_tag "response[raw_responses_attributes][#{index}][answer][]", options_from_collection_for_select(element.assetable.choice_answers, "id", "answer"), :multiple => true, :style => "width: 100px", :class => "question_#{element.assetable.question_content.id}_answer" %>
+									<%= select_tag "response[raw_responses_attributes][#{index}][answer][]", 
+										options_from_collection_for_select(element.assetable.choice_answers, "id", "answer", :selected=>Proc.new {|obj| obj.is_default}),
+										:multiple => true, 
+										:style => "width: 100px", 
+										:class => "question_#{element.assetable.question_content.id}_answer" %>
 								<% elsif element.assetable.answer_type == ChoiceAnswer::CHECKBOX %>
 								  <% for answer in element.assetable.choice_answers %>
-									  <%= check_box_tag "response[raw_responses_attributes][#{index}][answer][]", answer.id, false, :id => "answer_#{answer.id}", :class => "question_#{element.assetable.question_content.id}_answer" %>
+									  <%= check_box_tag "response[raw_responses_attributes][#{index}][answer][]", 
+									  	answer.id, 
+									  	false, 
+									  	:id => "answer_#{answer.id}", 
+									  	:class => "question_#{element.assetable.question_content.id}_answer",
+									  	:checked=>answer.is_default%>
 										<%= label_tag "answer_#{answer.id}", answer.answer %>
 									<% end -%>
 								<% end # if ChoiceQuestion %>
