--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -336,7 +336,8 @@ ol.outter, ul.outter {
 	color: #000;
 	line-height: normal;
 	padding: 0px;
-	margin: 3px 0px 0px 30px;
+	/*margin: 3px 0px 0px 30px;*/
+	margin: 0px;
 }
 
 li.outter {
