--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -89,41 +89,41 @@
 							<% if element.assetable_type == "ChoiceQuestion" %>
 								<% if element.assetable.answer_type == ChoiceAnswer::RADIO %>
 									<% for answer in element.assetable.choice_answers %>
-										<%= radio_button_tag "response[raw_responses_attributes][#{index}][answer]", answer.id, false,
+										<span class="vocradio"><%= radio_button_tag "response[raw_responses_attributes][#{index}][answer]", answer.id, false,
                       						:onclick => (element.assetable.question_content.flow_control ? "set_next_page(#{page.page_number}, #{answer.page.try(:page_number) || (element.page.page_number + 1)})" : nil),
 											:class => "question_#{element.assetable.question_content.id}_answer", :checked => answer.is_default
 										%>
-										<%= answer.answer%><br/>
+										<%= answer.answer%></span>
 									<% end -%>
 									
 								<% elsif element.assetable.answer_type == ChoiceAnswer::DROPDOWN %>
-									<%= select_tag "response[raw_responses_attributes][#{index}][answer]", 
+									<span class="vocdropdown"><%= select_tag "response[raw_responses_attributes][#{index}][answer]", 
 										options_from_collection_for_select(element.assetable.choice_answers, "id", "answer", :selected=>Proc.new {|obj| obj.is_default}),
 										:include_blank => true, :onchange => generate_next_page_on_change(element), 
-										:class => "question_#{element.assetable.question_content.id}_answer" %>
+										:class => "question_#{element.assetable.question_content.id}_answer" %></span>
 								<% elsif element.assetable.answer_type == ChoiceAnswer::MULTISELECT %>
-								  <%= select_tag "response[raw_responses_attributes][#{index}][answer][]", 
+								  <span class="vocmultiselect"><%= select_tag "response[raw_responses_attributes][#{index}][answer][]", 
 										options_from_collection_for_select(element.assetable.choice_answers, "id", "answer", :selected=>Proc.new {|obj| obj.is_default}),
 										:multiple => true, 
 										:style => "width: 100px", 
-										:class => "question_#{element.assetable.question_content.id}_answer" %>
+										:class => "question_#{element.assetable.question_content.id}_answer" %></span>
 								<% elsif element.assetable.answer_type == ChoiceAnswer::CHECKBOX %>
 								  <% for answer in element.assetable.choice_answers %>
-										<%= check_box_tag "response[raw_responses_attributes][#{index}][answer][]", 
+										<span class="voccheckbox"><%= check_box_tag "response[raw_responses_attributes][#{index}][answer][]", 
 																			  	answer.id, 
 																			  	false, 
 																			  	:id => "answer_#{answer.id}", 
 																			  	:class => "question_#{element.assetable.question_content.id}_answer",
 																			  	:checked=> answer.is_default || (params[element.assetable.statement.gsub('?', '').gsub(' ', '_').downcase.to_s] == answer.answer) %>
-										<%= label_tag "answer_#{answer.id}", answer.answer %>
+										<%= label_tag "answer_#{answer.id}", answer.answer %></span>
 									<% end -%>
 								<% end # if ChoiceQuestion %>
 							
 							<% elsif element.assetable_type == "TextQuestion" %>
 								<% if element.assetable.answer_type == "field" %>
-									<%= text_field_tag "response[raw_responses_attributes][#{index}][answer]", nil, :class => "text_question_field", :class => "question_#{element.assetable.question_content.id}_answer" %>
+									<span class="voctextfield"><%= text_field_tag "response[raw_responses_attributes][#{index}][answer]", nil, :class => "text_question_field", :class => "question_#{element.assetable.question_content.id}_answer" %></span>
 								<% elsif element.assetable.answer_type == "area" %>
-									<%= text_area_tag "response[raw_responses_attributes][#{index}][answer]", nil, :class => "text_question_area"%>
+									<span class="voctextarea"><%= text_area_tag "response[raw_responses_attributes][#{index}][answer]", nil, :class => "text_question_area"%></span>
 								<% end -%>
 							<% end -%>
 						<% else %>
