fix for default value on radio

--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -91,7 +91,7 @@
 									<% for answer in element.assetable.choice_answers %>
 										<span class="vocradio"><%= radio_button_tag "response[raw_responses_attributes][#{index}][answer]", answer.id, false,
                       						:onclick => (element.assetable.question_content.flow_control ? "set_next_page(#{page.page_number}, #{answer.page.try(:page_number) || (element.page.page_number + 1)})" : nil),
-											:class => "question_#{element.assetable.question_content.id}_answer", :checked => answer.is_default
+											:class => "question_#{element.assetable.question_content.id}_answer", :checked => answer.is_default || (params[element.assetable.statement.gsub('?', '').gsub(' ', '_').downcase.to_s] == answer.answer) %>
 										%>
 										<%= answer.answer%></span>
 									<% end -%>
