--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -41,6 +41,7 @@
 
 
 	<%= form_tag url_for(:controller => "survey_responses", :action => "create") do %>
+	  <%= hidden_field_tag :stylesheet, params[:stylesheet] %>
 	  <% index = 0 %>
 		<% for page in @survey_version.pages %>
 			<% question_number = 0 %>
