--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,10 @@
     <title><%= content_for?(:title) ? yield(:title) : "Untitled" %></title>
     <% unless params[:stylesheet] %>
 		<%= stylesheet_link_tag "application" %>
+		<style type="text/css">
+			.vocradio { display: block; margin-bottom: 5px; margin-top: 5px; }
+				
+		</style>
 	<% end %>
     <%= javascript_include_tag :defaults %>
     <%= csrf_meta_tag %>
