default for radios

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,7 @@
     <% unless params[:stylesheet] %>
 		<%= stylesheet_link_tag "application" %>
 		<style type="text/css">
-			.vocradio { display: block; margin-bottom: 5px; margin-top: 5px; }
-				
+			.vocraidoslarge .vocradio { display: block; margin-bottom: 5px; margin-top: 5px; }
 		</style>
 	<% end %>
     <%= javascript_include_tag :defaults %>
