--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -91,7 +91,7 @@
 							<%= "*" if element.assetable.question_content.required%></div>
 							<% if element.assetable_type == "ChoiceQuestion" %>
 								<% if element.assetable.answer_type == ChoiceAnswer::RADIO 
-									choice_a_size = (element.assetable.choice_answers.map {|x| x.answer}).join.size
+									choice_a_size = (element.assetable.choice_answers.map {|x| x.answer}).join('--').size
 									%>
 									<div class="vocradios<%= choice_a_size <= 100 ? 'short' : 'long' %>">
 										<% for answer in element.assetable.choice_answers %>
@@ -113,16 +113,20 @@
 										:multiple => true, 
 										:style => "width: 100px", 
 										:class => "question_#{element.assetable.question_content.id}_answer" %></span>
-								<% elsif element.assetable.answer_type == ChoiceAnswer::CHECKBOX %>
-								  <% for answer in element.assetable.choice_answers %>
-										<span class="voccheckbox"><%= check_box_tag "response[raw_responses_attributes][#{index}][answer][]", 
-																			  	answer.id, 
-																			  	false, 
-																			  	:id => "answer_#{answer.id}", 
-																			  	:class => "question_#{element.assetable.question_content.id}_answer",
-																			  	:checked=> answer.is_default || (params[element.assetable.statement.gsub('?', '').gsub(' ', '_').downcase.to_s] == answer.answer) %>
-										<%= label_tag "answer_#{answer.id}", answer.answer %></span>
-									<% end -%>
+								<% elsif element.assetable.answer_type == ChoiceAnswer::CHECKBOX
+									choice_a_size = (element.assetable.choice_answers.map {|x| x.answer}).join('--').size
+									%>
+									<div class="voccheckboxes<%= choice_a_size <= 90 ? 'short' : 'long' %>">
+									  <% for answer in element.assetable.choice_answers %>
+											<span class="voccheckbox"><%= check_box_tag "response[raw_responses_attributes][#{index}][answer][]", 
+																				  	answer.id, 
+																				  	false, 
+																				  	:id => "answer_#{answer.id}", 
+																				  	:class => "question_#{element.assetable.question_content.id}_answer",
+																				  	:checked=> answer.is_default || (params[element.assetable.statement.gsub('?', '').gsub(' ', '_').downcase.to_s] == answer.answer) %>
+											<%= label_tag "answer_#{answer.id}", answer.answer %></span>
+										<% end -%>
+									</div>
 								<% end # if ChoiceQuestion %>
 							
 							<% elsif element.assetable_type == "TextQuestion" %>
