--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
 		<style type="text/css">
 			<%# should be moved to application css %>
 			.vocradioslong .vocradio { display: block; margin-bottom: 5px; margin-top: 5px; }
-			.voccheckboxeslong .vocradio { display: block; margin-bottom: 5px; margin-top: 5px; }
+			.voccheckboxeslong .voccheckbox { display: block; margin-bottom: 5px; margin-top: 5px; }
 		</style>
 	<% end %>
     <%= javascript_include_tag :defaults %>
