--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
 		</style>
 	<% end %>
     <%= javascript_include_tag :defaults %>
+    <%= javascript_include_tag 'gatc-survey' %>
+    <%= javascript_include_tag 'gaaddons-survey.min' %>
+  
     <%= csrf_meta_tag %>
     <%= yield(:head) %>
 	<% if params[:stylesheet] %>
