--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 	<% end %>
     <%= javascript_include_tag :defaults %>
     <%= javascript_include_tag 'gatc-survey' %>
-    <%= javascript_include_tag 'gaaddons-survey.min' %>
+    <%= javascript_include_tag 'gaaddons-survey.min.js' %>
   
     <%= csrf_meta_tag %>
     <%= yield(:head) %>
